{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 549,
  "lineage": "a7abd81e-9ea0-02ea-d860-ddab3c83feaf",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:loadbalancer/app/backend-alb/8c3dc20bda2ab026",
            "arn_suffix": "app/backend-alb/8c3dc20bda2ab026",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-861790033.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:loadbalancer/app/backend-alb/8c3dc20bda2ab026",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d0a69d8e4404fca2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c3226ccc9730635"
              },
              {
                "subnet_id": "subnet-0d693481d3f53f80b"
              }
            ],
            "subnets": [
              "subnet-01c3226ccc9730635",
              "subnet-0d693481d3f53f80b"
            ],
            "tags": {
              "Name": "backend-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-alb",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:listener/app/backend-alb/8c3dc20bda2ab026/a4df616710471388",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:targetgroup/backend-alb-tg/96e12b71170cb7aa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:listener/app/backend-alb/8c3dc20bda2ab026/a4df616710471388",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:loadbalancer/app/backend-alb/8c3dc20bda2ab026",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "backend-vpc"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.main",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:targetgroup/backend-alb-tg/96e12b71170cb7aa",
            "arn_suffix": "targetgroup/backend-alb-tg/96e12b71170cb7aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:targetgroup/backend-alb-tg/96e12b71170cb7aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:644789170005:loadbalancer/app/backend-alb/8c3dc20bda2ab026"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-alb-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-alb-tg",
              "Project": "backend-vpc"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-0e5cfdd6743baddbc",
            "description": "Security group for Aurora cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5cfdd6743baddbc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from private subnets",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e45e66bd160ea371"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "app-aurora-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-aurora-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "app-aurora-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kong_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-083d87b823e705b1c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083d87b823e705b1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e45e66bd160ea371"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "kong-db-instance-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kong-db-instance-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "kong-db-instance-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-0829bc0734441eae8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0829bc0734441eae8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e45e66bd160ea371"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "redis-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.trust",
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_security_group.trust_db",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c2d3a10904f5ab8",
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:elastic-ip/eipalloc-00c2d3a10904f5ab8",
            "association_id": "eipassoc-03bd3c65765e6ffc0",
            "domain": "vpc",
            "id": "eipalloc-00c2d3a10904f5ab8",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-09f61bfe21f368c62",
            "private_dns": "ip-172-25-170-218.ap-southeast-1.compute.internal",
            "private_ip": "172.25.170.218",
            "public_dns": "ec2-52-74-99-41.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.99.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "backend-vpc-nat-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-nat-eip",
              "Project": "backend-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:internet-gateway/igw-0206e208957480fc1",
            "id": "igw-0206e208957480fc1",
            "owner_id": "644789170005",
            "tags": {
              "Name": "backend-vpc-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-igw",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c2d3a10904f5ab8",
            "association_id": "eipassoc-03bd3c65765e6ffc0",
            "connectivity_type": "public",
            "id": "nat-0d928c509fcdbef8b",
            "network_interface_id": "eni-09f61bfe21f368c62",
            "private_ip": "172.25.170.218",
            "public_ip": "52.74.99.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d693481d3f53f80b",
            "tags": {
              "Name": "backend-vpc-nat-gateway"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-nat-gateway",
              "Project": "backend-vpc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:route-table/rtb-00bd5f3761eec8f61",
            "id": "rtb-00bd5f3761eec8f61",
            "owner_id": "644789170005",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d928c509fcdbef8b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "backend-vpc-private-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-private-rt",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:route-table/rtb-0f5984efb540b724a",
            "id": "rtb-0f5984efb540b724a",
            "owner_id": "644789170005",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0206e208957480fc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "backend-vpc-trust-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-trust-rt",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0916bc17f734f71a6",
            "route_table_id": "rtb-00bd5f3761eec8f61",
            "subnet_id": "subnet-0019fc4d8b86ddbdc"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d069b6edeb6f2865",
            "route_table_id": "rtb-00bd5f3761eec8f61",
            "subnet_id": "subnet-0982ea34dc10c7fe6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059c3c3771aedaaf8",
            "route_table_id": "rtb-0f5984efb540b724a",
            "subnet_id": "subnet-0d693481d3f53f80b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d555ef0cd289fe19",
            "route_table_id": "rtb-0f5984efb540b724a",
            "subnet_id": "subnet-01c3226ccc9730635"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.trust",
            "module.vpc.aws_subnet.trust",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-0d0a69d8e4404fca2",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a69d8e4404fca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "backend-vpc-alb-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-vpc-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-alb-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-0e45e66bd160ea371",
            "description": "Security group for private resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e45e66bd160ea371",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d0a69d8e4404fca2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "backend-vpc-private-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-vpc-private-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-private-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "trust_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:security-group/sg-0805193df503a799f",
            "description": "Security group for database in trust subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0805193df503a799f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from private subnets",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e45e66bd160ea371"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "backend-vpc-trust-db-sg",
            "name_prefix": "",
            "owner_id": "644789170005",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-vpc-trust-db-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-trust-db-sg",
              "Project": "backend-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:subnet/subnet-0019fc4d8b86ddbdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.25.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0019fc4d8b86ddbdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644789170005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-vpc-private-subnet-b"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-private-subnet-b",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:subnet/subnet-0982ea34dc10c7fe6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.25.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0982ea34dc10c7fe6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "644789170005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-vpc-private-subnet-c"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-private-subnet-c",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "trust",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-southeast-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:subnet/subnet-0d693481d3f53f80b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.25.170.192/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d693481d3f53f80b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644789170005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-vpc-trust-subnet-b"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-trust-subnet-b",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ap-southeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:subnet/subnet-01c3226ccc9730635",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.25.170.224/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c3226ccc9730635",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "644789170005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "backend-vpc-trust-subnet-c"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc-trust-subnet-c",
              "Project": "backend-vpc"
            },
            "vpc_id": "vpc-038e1d46082a63150"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:644789170005:vpc/vpc-038e1d46082a63150",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.0.0/16",
            "default_network_acl_id": "acl-081b5f6d492aae0a9",
            "default_route_table_id": "rtb-033e1febdacf6edf6",
            "default_security_group_id": "sg-0f7f5b86d7d688e80",
            "dhcp_options_id": "dopt-081727f986f771b61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-038e1d46082a63150",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033e1febdacf6edf6",
            "owner_id": "644789170005",
            "tags": {
              "Name": "backend-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "backend-vpc",
              "Project": "backend-vpc"
            }
          }
        }
      ]
    }
  ]
}